--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "pwa-server",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "An HTTP server for Node designed to serve Progressive Web Apps in production",
     "repository": {
         "type": "git",
-        "url": "https://github.com/api-forge/pwa-server.git"
+        "url": "https://github.com/pupix/pwa-server.git"
     },
     "main": "src//server.js",
     "bin": {
